--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -276,7 +276,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Lf2Y/sjLkK96A8xgcqvWPkp9j6iCdokhf9zJ6tB5NBnrcYU69mjbv6NvxgOArobK9jO/Eoka3Yja71eCd9T0nySm6ZFIEkSEatPUVphTH1+QXiVdJxfwU9DdXVkzzVjs" data-form-email="true">
+                        <input type="hidden" value="BxHQYesM0yyx/HrOV7GlHBrWuyZhbKvqIBxMo5CWOn4thcavSZrJ4bDaKkqkkq7nHvoK/cFBkTSWbkyLv/o6tM00PkKTfzC/jKXWDm0ZX3w5XN8PGcUrB+5pk9BrAARQ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
