--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="1r45AVb96ec2lm5hQlqTtjL4n1xdm2lmC85aDMdCBSR1DJTVqSR6exFJZTNEi4gSoMTnot0c/bTfDKcpcha2MJZREkSnOGmCnjYRe7pZpkKJ+BvaxjkLswEoawPJVZDi" data-form-email="true">
+                        <input type="hidden" value="inrD93Quv/WHUBHzW5xSJ1s8tZr9Mh907iTuFSueUHcRdFcnsFD0oy7kv2MpaAZhtYQsBaBb3CPLs9vWHhOcNxQ5m7UdLZQoq1MinzmDj5eR11FwvUFjuiMn7f1R4hdu" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
