--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="inrD93Quv/WHUBHzW5xSJ1s8tZr9Mh907iTuFSueUHcRdFcnsFD0oy7kv2MpaAZhtYQsBaBb3CPLs9vWHhOcNxQ5m7UdLZQoq1MinzmDj5eR11FwvUFjuiMn7f1R4hdu" data-form-email="true">
+                        <input type="hidden" value="cqZre2w0q7YO9Jnm5jk34FbfVXDYIGpQ/ra6pBOYoa7YMytCwjgPZbizV1qNc5aFvVXsowU78qsepEZW66fh7RGRIIyLpnLsltT/MJmhZtZnIapvN5ipOHRaCFcitvqc" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -212,8 +212,7 @@
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Contacts</strong><br>
-Email: sngompe@cabinet-impact.com<br>
-Phone 1: +237 699 009 863<br>Phone 2: +237 677 588 252</p>
+Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm) </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p></p><p><strong>Links</strong><br><a href="#" style="font-size: 0.875rem; background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page</a><br></p><p><a href="#">Download our Catalogue&nbsp;</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a><br><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
