create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-i">Facilitation Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/session-2548826-2000x1328.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/session-2548826-2000x1328.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
