--- a/book.html
+++ b/book.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-i">Facilitation Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="WwXXPtho9vJflURudTfNh2nMlQvKjQdoEPjAP7AaV621vTrUWsSFgQ207y9C6GRg5noOL7hArXGL0a2r7D6qLILWn7bKJ2ADs1mcEIwUNOIA9pQl6FuO7xIPUJWMJYPc" data-form-email="true">
+                        <input type="hidden" value="pT6nt+DYUO8iCAVnr3+qTJUVVFyb9ANtJIofDXOlQU2l3214kTxypLtke/jdw7leNMLI7r+KlqpD8gaBBDrl7FFxEr065Vn0i4gaCUuA0ypcbzZWuI8+TWj5UhzKzCzL" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
