--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-i">Facilitation Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
     <div>
         <div>
             <div>
@@ -191,7 +191,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you and see you soon !</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="WANT TO JOIN OUR NEXT TRAINING SESSION ?">
-                        <input type="hidden" value="Al4Abw1ScQYuUIFzQlRNJwRi54J5s0+R3JDhlo5TKB7cSRdt8V/khmDl3K4F0eM/eSYioHdX66Ue7B7k2nbKByMDZMFu26fwiI+B3OeX5Fc8vQJYgJwcXtKnmSDzoC0M" data-form-email="true">
+                        <input type="hidden" value="LUSHnjIHnp+CpNn/ztHp1AjbOVdMqpW0YQ8f9asJvbl1ORYhUqKyOZCVCcFBjFDcwmAjs52567kkFEyFglCQthU8CYX2OFPWMaiN3BML2iFLboIiv0RlZWSFCCD2a5nO" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-10-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
