--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-i">Facilitation Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-d" style="background-image: url(assets/images/session-2548826-2000x1328.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-d" style="background-image: url(assets/images/session-2548826-2000x1328.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
