--- a/testimonies.html
+++ b/testimonies.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-i">Facilitation Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html"><p>HOME&nbsp; &nbsp;</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="services.html" aria-expanded="true">SERVICES</a><div class="dropdown-menu"><a class="dropdown-item" href="services.html#msg-box8-d">Overview</a><a class="dropdown-item" href="services.html#msg-box5-g">Presentation Skills Training</a><a class="dropdown-item" href="services.html#msg-box5-h">Corporate Public Speaking Workshop</a><a class="dropdown-item" href="services.html#msg-box5-j" aria-expanded="false">Public Speaking Coaching</a><a class="dropdown-item" href="services.html#msg-box5-k">Youth Speaking WorkShop</a><a class="dropdown-item" href="services.html#msg-box5-m">One to one Coaching</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="events.html">EVENTS</a></li><li class="nav-item"><a class="nav-link link" href="testimonies.html">TESTIMONIES</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="lMepnzYnOgNhog1g21ZLIgSo1+zIbfB6+qrV+w2VNrVxY9YDBHfiG0/5nqB4+3fo82kR1/L1BVPqlECw4C2J93cBW+VwyBmgOXIX3Njnb+d8OYrEfJL1PsJ/K1c5dqfl" data-form-email="true">
+                        <input type="hidden" value="PQZRHZeEdeFr2cD43+6qcd4YDiVEBr8z/z0L6POXdcND7Zs9kQgbhWrbRPejDze+A2ukgmX8FMNhMddu4hhJWwM84ZnSiVPxN7MZ6P4nCeZI+bfrbYr/9IWIc7kxKZkm" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
