--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="pT6nt+DYUO8iCAVnr3+qTJUVVFyb9ANtJIofDXOlQU2l3214kTxypLtke/jdw7leNMLI7r+KlqpD8gaBBDrl7FFxEr065Vn0i4gaCUuA0ypcbzZWuI8+TWj5UhzKzCzL" data-form-email="true">
+                        <input type="hidden" value="19NIRz9uXaLdOzsbnTPMhBueV7o6TwcuX72jHG6TEUsm6QyiinaqewxXLoR6BPdoqD5dfHqAngb9AB++lKzSrKGMpfRa7k43dENrmrAHkG1iUuk7cEg0L5W73kRZ6sWF" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
