create github pages

--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-d" style="background-image: url(assets/images/session-2548826-2000x1328.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-d" style="background-image: url(assets/images/session-2548826-2000x1328.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -162,7 +162,7 @@
                   <h3 class="mbr-section-title display-2">Presentation Skills Training</h3>
                   <div class="lead">
 
-                    <p>Presentations are about the presenter sharing their expertise, insights, and clear messaging so their audience understands what the data means, actions to take, or changes to champion.<br><br>The most influential leaders know presentations are a platform to establishing thought leadership and industry presence.  <br><br>Through on site practice and feedback, IMPACT coaches entrepreneurs/executives/students to be more effective presenters by focusing on their audience and clarifying their message – whether they are leading a team, informing peers, promoting a project, or pitching their startups.<br></p>
+                    <p>Presentations are about the presenter sharing their expertise, insights, and clear messaging so their audience understands what the data means, actions to take, or changes to champion.<br><br>The most influential leaders know presentations are a platform to establishing thought leadership and industry presence.  <br><br>Through on site practice and feedback, IMPACT coaches entrepreneurs/executives/students to be more effective presenters by focusing on their audience and clarifying their message – whether they are leading a team, informing peers, promoting a project, or pitching their startups.<br><br>When, Where &amp; How much:<br><br>Classes for executives, managers and leaders<br>Classes for young professionals<br>This course is also available as one-on-one coaching and Corporate Public Speaking Workshop<br><br></p>
 
                   </div>
 
