create github pages

--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="N/YneJDiFUNwOxCTDdlvIeFAPmwiWd/Lf3Ra4lz+cTDma/LkiUzFAdu+AP2KTI1mTZlNTwlSkL3NQaK1L3ZCgIWICHJrjSl7rGKkusctufAo+JN5/FaS6DYuAmau4I15" data-form-email="true">
+                        <input type="hidden" value="lH7JcbUTdZB9+LkQ22gTf9NiqfhYa/fETz1wvRYi5/3oY7SYo7RnhWd9egdm5VeO8nS+C9DxIHsfSq8aanPbxHwxI84JVFm5GYtmvEBQRXLBzEpuVItyKTY/eLvhdIv6" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
