--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-d" style="background-image: url(assets/images/session-2548826-2000x1328.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-d" style="background-image: url(assets/images/session-2548826-2000x1328.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -126,7 +126,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Public Speaking Coaching</h4>
                         
-                        <p class="card-text">XXX gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p>
+                        <p class="card-text">"It's not what you say, but how you say it." How often have you heard that phrase? It might be over-familiar but it's well-used because it's true. <br>All what you need to become a polished persuasive public speaker<br></p>
                         
                     </div>
                 </div>
