--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="cY7c2mObQn9OK+0R8uRURqKaAznwW6db36LNEQRHqlvQGHoXa6pgoB83oMZL1/R7hNIXvAPg7Of6uLu7fQiEZxwt4176ALrLnz+chQn2xzwaLm/D0yaEpKDKaztvzbx3" data-form-email="true">
+                        <input type="hidden" value="tpZDxQvavgrJ3eW52ApxNBM7vfIVWtx6a/HfUoAtqRFf4+KMlx1ItKukRJ4mhi8lAXm/qBxCWQiVkBuC+1K1PhKaTy9YRSCAiDo1CUdL6aCSyidbKVKOkv14DEm4qGJv" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
