--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="7PnGD4n2J5/Hw0WZs3i8Qe0crhd04rOqe9LV1MqqR7Tnbw89p8hhG6ZJbGdgImModLxXEkCWpNJmIwhmgDjErOhB+Fkzq9444s2VECTydfp2VhJBS70XMtsiL8ykJuWE" data-form-email="true">
+                        <input type="hidden" value="EkHX5WkM8roWnZtgvWbqCVRVC89kH4vXuoV/ehgNlv0zmtKOgU1jfCKb+owRU2vSMEajBb028kEoLpR7ytb7PMkNnww7dy9pMxc3USF7mD6EpOBq4u6jWor6GMju7avu" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -154,7 +154,7 @@
 Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm)<br>WhatsApp: +237 777 588 252<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br><a href="#" style="font-size: 0.875rem; background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page</a><br></p><p><a href="#">Download our Catalogue&nbsp;</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a><br><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
+                <p></p><p><strong>Links</strong><br><span style="font-size: 0.875rem; background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page</span><br></p><p><a href="#">Download our Catalogue&nbsp;</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a><br><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
             </div>
 
         </div>
