--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
     <div>
         <div>
             <div>
@@ -191,7 +191,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you and see you soon !</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="WANT TO JOIN OUR NEXT TRAINING SESSION ?">
-                        <input type="hidden" value="yfv4lOND7ocARtqWpmsb6nsmexxxCgKKRVb+/9ALJKnEtQrxYY2x33dykPSDdlQH751HPseP/Wwe/CWIG7o86AZBlnwGJZw8SOmUthcvTb0oX0nwqqnxUmrb+xxMhcjM" data-form-email="true">
+                        <input type="hidden" value="JA4AWxhCvaEYijfVy8stNj0E2tA7KBONJoYQ9RyL2IA6wWtkTbr5ZnMdZRJZyonE3ymRd6n7s8mT7Ur3w4rb/7Nw4P4YTY9ffQqtd3ZolwkzVocwV8pf3XdPwV9xSkNB" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-10-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
