--- a/events.html
+++ b/events.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
     <div>
         <div>
             <div>
@@ -191,7 +191,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you and see you soon !</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="WANT TO JOIN OUR NEXT TRAINING SESSION ?">
-                        <input type="hidden" value="G5H6EjDwgFPb3fyUJ3qlFfFE1t6+FkkoplHwB/7k2xBzg8Woa+2n4TodrjK+BQ+YyfvLKfqR0srtHWg5PznNnvAeBg+dOLK/9n3AUWhbMdgh0LUT3l/ws+ASlwZv0m7G" data-form-email="true">
+                        <input type="hidden" value="Ough3WA5muYElwXGw9Bt04poYDr7nGtips4bzjK4FvLbDdqW7u422f0TEnxgpaYO1x4E87VWl10DBE51a4PgYjFkjGJJwR6tGnxjrYTZWxbvzS+xgiTL0Q3jRHEnCwqD" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-10-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -218,7 +218,7 @@
 Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm)<br>WhatsApp: +237 777 588 252<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br><a href="#" style="font-size: 0.875rem; background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page</a><br></p><p><a href="#">Download our Catalogue&nbsp;</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a><br><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
+                <p></p><p><strong>Links</strong><br><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page&nbsp;</a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
             </div>
 
         </div>
