--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="Ie2T6OJfK/mQ8E7P9Nc9a6PqV+tCrfIstAgW0Qbm3Jf9Qa6V3UnzgIHh1SKhZJb8Pl6RcCWpEvbqxK5LF7GLU9/Afw6K0XD1n7QZGanzmcAQ+/mYZC8VdxWnJTKMcYHo" data-form-email="true">
+                        <input type="hidden" value="ql8KLHWdMeIAc5j/fuBGvL89bKdCJW1BWPZqUbZWUfvtLKelEEp/bZ9hjK+OcckiAWaJvZPf48X315Fc3jcCItmBC7VB1nWZkc83k2VJcTYjLB06WAtszxPFkWNjYZ96" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -215,7 +215,7 @@
 Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm)<br>WhatsApp: +237 777 588 252<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br><a href="#" style="font-size: 0.875rem; background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page</a><br></p><p><a href="#">Download our Catalogue&nbsp;</a><a class="text-primary" href="https://mobirise.com/mobirise-free-mac.zip"></a><br><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
+                <p></p><p><strong>Links</strong><br><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page&nbsp;</a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
             </div>
 
         </div>
