create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/session-2548826-2000x1328.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/session-2548826-2000x1328.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -381,7 +381,7 @@
 Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm)<br>WhatsApp: +237 777 588 252<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page&nbsp;</a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
+                <p></p><p><strong>Links</strong><br><a href="https://www.linkedin.com/company-beta/11223402/" target="_blank">LinkedIn Page&nbsp;</a><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;"></a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
             </div>
 
         </div>
