--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="uBC8trkFx0LMXMS86NdSC6UekcM6dmmMjCxstUk/PFv+EkXw/7b1PYT6/tU0K1V/yY0yWXJ0X1Zq2vy9oUGUhIyGHQ0i/pIkHGjV4xzMdyVQ8CydFamSU4VzJ16GQRaV" data-form-email="true">
+                        <input type="hidden" value="Jr4ObuI8it57fBp3V4xHYgiKSNG6n/ACCF5UVVJOcARyvrD3ip1an19p3sIZCBwpb4eozj4yWzHJ1cFND6ODEywBQEB+U4d9PO6geNlg7oqX1XuQwe7GcAxi9inzIaCj" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -154,7 +154,7 @@
 Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm)<br>WhatsApp: +237 777 588 252<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page&nbsp;</a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
+                <p></p><p><strong>Links</strong><br><a href="https://www.linkedin.com/company-beta/11223402/" target="_blank">LinkedIn Page&nbsp;</a><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;"></a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
             </div>
 
         </div>
