--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="xzuzPtOkyAQmM4Ed8u8Qv5WJZHAg/zL7DylwBlBSE6a/jvxx+KYxfYvhgpOVPkgEIfN+Y8t22YYL9C3rnqVQdkoTf88NxJ8Zwqlu4EPqc9kH/YehVfqE55FFXDF+9JNX" data-form-email="true">
+                        <input type="hidden" value="nOq+SRa15s4bxGKvcru5iZUg+zOTi6gkHjFbn/SwkmxseJgEsCc2a7OXlG4H2R4duJUy8UQcfcKOfpBwL3c4erl0VyItFhkeQolfahEA2ElPPSPAqKtyZxss2DAL6Hs6" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -215,7 +215,7 @@
 Email: contact@cabinet-impact.com<br>Mobile: +237 699 009 863<br>Phone:&nbsp;+237 233 43 14 26&nbsp;(8.30 am-5pm)<br>WhatsApp: +237 777 588 252<br> </p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p></p><p><strong>Links</strong><br><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;">LinkedIn Page&nbsp;</a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
+                <p></p><p><strong>Links</strong><br><a href="https://www.linkedin.com/company-beta/11223402/" target="_blank">LinkedIn Page&nbsp;</a><a href="#" style="background-color: rgb(46, 46, 46); line-height: 1.5;"></a><br></p><p><a class="text-primary" href="http://newframegroup.com" target="_blank">Website Builder</a></p><p></p>
             </div>
 
         </div>
