--- a/book.html
+++ b/book.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Jr4ObuI8it57fBp3V4xHYgiKSNG6n/ACCF5UVVJOcARyvrD3ip1an19p3sIZCBwpb4eozj4yWzHJ1cFND6ODEywBQEB+U4d9PO6geNlg7oqX1XuQwe7GcAxi9inzIaCj" data-form-email="true">
+                        <input type="hidden" value="NGKntSICVPrfAxlmBvdqyu81mvunbnJFdY8g5PYOqTZqkJ5Be92GjQIfRj7SC9CDO7l/oVow7V+LjZ8FisEYicYGSfXt7h9JRbEa3V7sFjR412XXu22uIf8byU43I1DC" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
