--- a/testimonies.html
+++ b/testimonies.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials3-15" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -84,7 +84,7 @@
                         <div class="card-block"><p>“Its really a very amazing tool that makes me learn wonderful things about myself. I hope to have very big opportunity to use it in front of a public. Thanks again for this nice session”</p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/capture-156x160.png" class="img-circle"></div>
-                            <div class="mbr-author-name">Abanoub S.</div>
+                            <div class="mbr-author-name">Anthony Kamgang</div>
                             <small class="mbr-author-desc">Youth speaker</small>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                         <div class="card-block"><p>“First of all hands off to you guys for your effort and nice, super tool. Good work IMPACT team. We are expecting the next session soon with advance tools with full leadership tips. Great effort and super experience.”</p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/img-130x160.jpg" class="img-circle"></div>
-                            <div class="mbr-author-name">Suffian A.</div>
+                            <div class="mbr-author-name">Brice Muna</div>
                             <small class="mbr-author-desc">Youth speaker</small>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <div class="card-block"><p>“At first view, looks like a nice innovative programme, i like the great focus and time that was given to the fast thinking/fast reacting.&nbsp;<span style="font-size: 1.125rem; line-height: 2;">Give me more, I like it !”</span></p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/img-143x160.jpg" class="img-circle"></div>
-                            <div class="mbr-author-name">Jhollman C.</div>
+                            <div class="mbr-author-name">Leana Fotso</div>
                             <small class="mbr-author-desc">Youth speaker</small>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="Vc8j8Vp09VsutNgJc72R2yWthla15N8aLZeubALP8TpvWe7RsC7P8MWerZBNQNTMi0YMW40UIzj8MIUKpKL09NUvKjN3KWZpRY/37q3ZkF7LfXhq2hlO30L2vlbke5yA" data-form-email="true">
+                        <input type="hidden" value="eSzxgUuBDxeFnejggwW/xDDigES3w7cOHwCaH7jHeEKxjHQA+GuP4HjKUzHA7sp3Knap4dR5FLZkNZaUXmTSBA71pbPG1M017X/l7Zqm++kNVOLxOiSycW2L/XQPCTPn" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
