create github pages

--- a/book-fr.html
+++ b/book-fr.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1n" style="background-image: url(assets/images/mbr-2000x1276.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -98,7 +98,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="FORMULAIRE">
 
-                        <input type="hidden" value="s6rJNQ9CJ2QA4x0nhecKguI58kx5suCFmtCARg77J3Hq4UfFyI99mSIsTi7UXJSkXM4aUSPHOFeOF32qoSq7xkotrMKO/Uc5b4iSESLDuzJxz3remFLx000RrytUiz+W" data-form-email="true">
+                        <input type="hidden" value="raM/OTsglwnZzTNmeD710Z8Ru/wKcNhZobaVmg1dr4Fj/93pgL8z1eBlE1zdXrsiNYppNRU/F6RwMh8vvUe/c6cRHE26cnNSDq5F/KSu8yh7tyV50RpSYKhdi7Lv+LnV" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
