--- a/events-fr.html
+++ b/events-fr.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="3000" id="slider-w">
     <div>
         <div>
             <div>
@@ -196,7 +196,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Merci ! A très bientôt.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="ENVIE DE REJOINDRE NOTRE PROCHAINE SESSION ?">
-                        <input type="hidden" value="JadceZQPdb/cTxibHZMo0eniEkjt7PmpeaNvQnGq9o4/H4trtzTtmNivNuXm8NUZEF8Xvscr68GnO1iOA0zXvR7OjtlQoyqeQoRD3thMHxXkGNk8Y+EtB1lewwvQyZYg" data-form-email="true">
+                        <input type="hidden" value="TupM6XuaZ9eoWtqKnANjr2ow+LviCKgVkPiSq0RI/g50QPVmBLApxFlQwUWEX99i9J5n8MWYM6jMOXJUYBDmnrDXOJMnp8ale681hj2+6OZXe1fjEYCSa6bdfpdz+DNW" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Saisissez votre email..." id="form2-10-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SOUSCRIRE</button></span>
