--- a/index-fr.html
+++ b/index-fr.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/session-2548826-2000x1328.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/session-2548826-2000x1328.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -430,7 +430,7 @@ Nous construisons des relations basées sur la confiance.</p>
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Merci ! A bientôt.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="S'ABONNER">
-                        <input type="hidden" value="rpHCwxYnOh3JWGlR5ooteq44nsx2vgJbxsv5e52vEjbcORq1Jv/9gkbtieS+zcF2N2PoGVwAPkB8rVNQrBe+t7u1HRbmYS3Rsw6kToJwEGJos0wde6Xs4ze6UYojOW0=" data-form-email="true">
+                        <input type="hidden" value="57v1hIcFEl2J+zaIVMcC3ymYBsUvBkYjaP5p111wR9ey+8ndsxutN4T05k2bX5gHugsCvy3xtNO+b6xLaOMw/8vkaKB958hzyTzmulVAgggUNs63AuAWapOuswSu8ng1" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Saisissez votre adresse email" id="form2-1w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SOUSCRIRE</button></span>
